frontend/test/should_fail/index_count_fromto_argument2_mismatch.grg
#using "index_count_model.gm"

rule i {
	if{ countNodesFromIndexFromTo(fooi, 42.0, "mismatching-string") > 0; }
	
	modify {
	}
}
